--- a/src/App.module.css
+++ b/src/App.module.css
@@ -57,4 +57,13 @@ h6 {
     /* padding: 5px; */
 }
     
+h7 {
+    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+    font-size: 28px;
+    padding: 2px 2px;
+    margin: 2px 2px 10px 2px;
+    text-align: center;
+    text-transform: uppercase;
+    /* text-rendering: optimizeLegibility; */
+}
     
